docs: Add changelog section to README.md