@@ -1,202 +1,169 @@
-# Unified Data Service
+# Unified Data Service / 统一数据服务
 
-## 📝 Changelog
+[![Java Version](https://img.shields.io/badge/Java-17%2B-blue)](https://www.oracle.com/java/technologies/javase/jdk17-archive-downloads.html)
+[![Spring Boot](https://img.shields.io/badge/Spring%20Boot-3.2.5-green)](https://spring.io/projects/spring-boot)
+[![License](https://img.shields.io/badge/License-Apache%202.0-blue.svg)](https://opensource.org/licenses/Apache-2.0)
 
-### [2025-06-24] - Initial Release
-- **Fixed**: Resolved 500 Internal Server Error on API endpoints by adding JVM argument `--add-opens=java.base/java.nio=ALL-UNNAMED`
-- **Fixed**: Resolved application startup failure by cleaning up duplicate properties in `application.properties`
-- **Added**: Spring Boot Actuator with `/actuator/health` and `/actuator/metrics` endpoints
-- **Improved**: Enhanced logging configuration for better debugging
-- **Added**: Git repository initialization with comprehensive `.gitignore`
+## 📖 概述 / Overview
 
-## Overview
+Unified Data Service is a high-performance Spring Boot application designed to fetch, parse, filter, and serve metric data from various sources. It leverages Apache Arrow for efficient in-memory columnar data processing, providing a fast and scalable solution for data unification.
 
-The Unified Data Service is a high-performance Spring Boot application designed to fetch, parse, filter, and serve metric data from various sources. It leverages Apache Arrow for efficient in-memory columnar data processing, providing a fast and scalable solution for data unification.
+统一数据服务是一个基于 Java 的数据服务，旨在从多种异构数据源（如提供 JSON 或 CSV 的 HTTP 接口）获取、处理并统一数据。它将不同来源的数据转换为一致的中间格式（Apache Arrow Table），并通过统一的查询接口提供服务。
 
-The service exposes a simple REST API to retrieve data in CSV format, with powerful filtering capabilities.
+## ✨ 核心优势 / Key Features
 
-## Tech Stack
+- **配置驱动 / Configuration-Driven**
+  - 无需修改代码，仅通过在数据库中添加元数据定义，即可动态接入新的数据指标
+  - No code changes needed, dynamically integrate new data metrics by adding metadata definitions to the database
 
-- **Java 17** & **Spring Boot 3.2.5**
-- **Apache Arrow 15.0.0**: For high-performance, zero-copy in-memory columnar data representation.
-- **Apache Commons CSV**: For parsing CSV data streams.
-- **Jackson**: For parsing JSON data and handling configurations.
-- **Spring Cache (Caffeine)**: For in-memory caching of parsed data tables to improve performance.
-- **Lombok**: To reduce boilerplate code.
-- **H2 Database**: In-memory database for storing metric metadata.
-- **Maven**: For dependency management and building the project.
-- **JUnit 5 & Mockito**: For unit and integration testing.
+- **高度可扩展 / Highly Extensible**
+  - 采用策略模式，通过实现 `DataParser` 接口，轻松添加新的数据格式解析能力
+  - Easily add support for new data formats by implementing the `DataParser` interface
 
-## How to Build and Run
+- **高性能 / High Performance**
+  - 使用 Apache Arrow 进行高效的内存列式数据处理
+  - Efficient in-memory columnar data processing with Apache Arrow
+  - 基于 Caffeine 的缓存层，提高重复查询性能
+  - Caffeine-based caching layer for improved performance on repeated queries
 
-### Prerequisites
-- JDK 17 or later
-- Apache Maven
+- **统一与标准化 / Unification & Standardization**
+  - 将多格式的外部数据源统一清洗为标准化的中间数据结构
+  - Unify and clean multi-format data sources into standardized intermediate data structures
 
-### Build
+## 🚀 快速开始 / Quick Start
 
-To build the project, run the following command from the root directory:
+### 环境要求 / Prerequisites
+
+- Java 17 或更高版本 / JDK 17 or later
+- Apache Maven 3.6+
+
+### 构建项目 / Build the Project
 
 ```bash
 mvn clean install
 ```
 
-This will compile the code, run all unit tests, and package the application into a single executable JAR file in the `target/` directory.
-
-### Run
-
-To run the application, use the following command:
+### 运行应用 / Run the Application
 
 ```bash
-java -jar target/unified-data-service-0.0.1-SNAPSHOT.jar
+mvn spring-boot:run
 ```
 
-The service will start on port `8080` by default.
+应用将在 `http://localhost:8080` 启动 / The application will start at `http://localhost:8080`
 
-## API Documentation
+## 📚 技术栈 / Tech Stack
 
-The service provides a single primary endpoint for retrieving metric data.
+- **核心框架 / Core Framework**
+  - Java 17
+  - Spring Boot 3.2.5
+  - Spring Data JPA
+  - Spring Cache (Caffeine)
 
-### Get Metric Data
+- **数据处理 / Data Processing**
+  - Apache Arrow 15.0.0
+  - Jackson (JSON)
+  - Apache Commons CSV
 
-- **URL**: `/api/metrics/{metricName}`
-- **Method**: `GET`
-- **Produces**: `text/csv`
+- **数据库 / Database**
+  - H2 (内存数据库 / In-memory)
+  - Spring Data JPA
 
-#### Parameters
+- **工具 / Tools**
+  - Lombok
+  - JUnit 5
+  - Mockito
+  - Spring Boot Actuator
 
-- **`metricName`** (path variable): The name of the metric to retrieve (e.g., `user_signups`, `system_load`).
-- **`filter`** (request parameter, optional): An expression to filter the data. The format is `columnName operator value`.
-    - **Operators**: `==`, `!=`, `>`, `<`, `>=`, `<=`
-    - **Value Types**: String values must be enclosed in single quotes (e.g., `'value'`). Numeric values do not require quotes.
+## 🔍 API 文档 / API Documentation
 
-#### Example Usage
+### 获取指标数据 / Get Metric Data
 
-**1. Get unfiltered data for the `user_signups` metric:**
+- **URL**: `GET /api/metrics/{metricName}`
+- **Response**: `text/csv`
+
+#### 参数 / Parameters
+
+| 参数 / Parameter | 类型 / Type | 必填 / Required | 描述 / Description |
+|----------------|------------|----------------|-------------------|
+| metricName     | Path       | 是 / Yes       | 指标名称 / Metric name (e.g., `user_signups`, `system_load`) |
+| filter         | Query      | 否 / No        | 过滤表达式 / Filter expression (e.g., `age > 30`, `region == 'US'`) |
+
+#### 操作符 / Operators
+- 比较: `==`, `!=`, `>`, `<`, `>=`, `<=`
+- 字符串值必须用单引号括起来 / String values must be enclosed in single quotes
+- 数值不需要引号 / Numeric values should not be quoted
+
+#### 示例 / Examples
 
 ```bash
+# 获取未过滤的数据 / Get unfiltered data
 curl http://localhost:8080/api/metrics/user_signups
-```
 
-**2. Get data for users with an age greater than 30:**
-
-```bash
+# 获取年龄大于30的用户数据 / Get users older than 30
 curl "http://localhost:8080/api/metrics/user_signups?filter=age > 30"
-```
 
-**3. Get data for users from the 'US' region:**
-
-```bash
+# 获取美国地区用户数据 / Get users from US region
 curl "http://localhost:8080/api/metrics/user_signups?filter=region == 'US'"
 ```
 
-## Changelog
+## 🏗️ 项目结构 / Project Structure
 
-### Bug Fixes and Test Improvements (June 23, 2025)
-
-- **Fixed JSON Parser Timestamp Handling**:
-  - Added proper support for `TIMESTAMP` data type in `JsonDataParser`
-  - Fixed null handling for timestamp fields in JSON data
-  - Updated test data to correctly represent null timestamp values
-
-- **Test Suite Improvements**:
-  - Fixed field name mismatches in test data
-  - Resolved `ClassCastException` for timestamp vectors
-  - Ensured all tests in `JsonDataParserTest` pass successfully
-  - Verified full test suite passes with 100% success rate
-
-- **Code Quality**:
-  - Improved error handling in data parsers
-  - Added proper null checks and validations
-  - Enhanced test coverage for edge cases
-
-### Project Rewrite (June 2025)
-
-- **Complete Project Restoration**: The entire application was rebuilt from scratch after an accidental data loss.
-- **Core Architecture**: Re-established a robust, modular architecture with clear separation of concerns (fetching, parsing, filtering, caching, API).
-- **High-Performance Data Handling**: Integrated Apache Arrow (`VectorSchemaRoot`) for efficient, zero-copy in-memory data management.
-- **Unified Data Parsers**: Implemented extensible `DataParser` interface for JSON and CSV sources.
-- **Robust Filtering**: Created a `DataFilteringService` with a regex-based engine to support complex filtering expressions.
-- **Caching Layer**: Added a Caffeine-based caching layer via Spring Cache to significantly improve performance for repeated queries.
-- **Comprehensive Unit Tests**: Wrote extensive unit tests for all core services (`MetricService`, `DataFilteringService`) and data parsers (`JsonDataParser`, `CsvDataParser`), achieving full test coverage for the business logic.
-
-This project is a Java-based service designed to fetch, process, and unify data from various heterogeneous sources (initially HTTP endpoints providing JSON or CSV). It transforms the data into a consistent intermediate format (Apache Arrow Table) and provides it through a unified query interface.
-
----
-
-# 统一数据服务
-
-本项目是一个基于 Java 的数据服务，旨在从多种异构数据源（初期为提供 JSON 或 CSV 的 HTTP 接口）获取、处理并统一数据。它将不同来源的数据转换为一致的中间格式（Apache Arrow Table），并通过统一的查询接口提供服务。
-
-## 核心优势
-
--   **配置驱动 (Configuration-Driven)**: 无需修改代码，仅通过在数据库中添加元数据定义，即可动态接入新的数据指标。
--   **高度可扩展 (Highly Extensible)**: 采用策略模式，通过实现 `DataParser` 接口，可以轻松地为系统添加新的数据格式解析能力（如 XML、Protobuf 等）。
--   **高性能 (High Performance)**: 结合使用高性能的列式内存格式（Apache Arrow）和本地被动缓存（Caffeine），确保高缓存命中率和毫秒级的查询响应。
--   **高容错 (High Fault Tolerance)**: 内置的 HTTP 客户端具备连接池和失败自动重试机制。服务关键路径拥有完善的日志和异常处理，确保系统稳定性。
--   **统一与标准化 (Unification & Standardization)**: 将杂乱的、多格式的外部数据源，统一清洗为标准化的中间数据结构，为上层应用（如未来的SQL查询引擎）提供一个干净、一致的数据视图。
-
-## 技术架构
-
-服务基于 Spring Boot 构建，并遵循模块化的架构设计：
-
--   **Controller (`MetricController`)**: 暴露 REST API 端点，作为服务的外部入口。
--   **Service (`MetricService`)**: 编排核心业务逻辑，包括数据获取、解析和缓存。
--   **Repository (`MetricInfoRepository`)**: 使用 Spring Data JPA 管理指标元数据的持久化。
--   **Data Fetcher (`DataFetcherService`)**: 封装从 HTTP 源获取原始数据的逻辑。
--   **Parsers (`DataParser` 接口及其实现)**: 用于解析不同数据格式（JSON, CSV）的策略模式实现。
--   **Model**: 包含 JPA 实体 (`MetricInfo`)、数据枚举和 Apache Arrow 表的包装类 `UnifiedDataTable`。
--   **Configuration**: 包含 Spring Boot 配置、`HttpClient` 设置以及用于植入样本数据的 `DataInitializer`。
-
-## 技术选型
-
--   **框架**: Spring Boot 3
--   **语言**: Java 17
--   **构建工具**: Maven
--   **HTTP 客户端**: Apache HttpClient 5
--   **数据格式**: Jackson (JSON), Apache Commons CSV
--   **中间格式**: Apache Arrow
--   **缓存**: Spring Cache with Caffeine
--   **数据库**: H2 (内存数据库, 用于演示), Spring Data JPA
--   **监控**: Spring Boot Actuator, Micrometer (Prometheus)
--   **测试**: JUnit 5, Mockito
-
-## 快速开始
-
-### 环境要求
-
--   Java 17 或更高版本
--   Apache Maven
-
-### 运行应用
-
-1.  克隆本仓库。
-2.  进入项目根目录。
-3.  使用 Spring Boot Maven 插件运行应用:
-
-    ```bash
-    mvn spring-boot:run
-    ```
-
-服务将启动在 `http://localhost:8080`。
-
-### Filtering Results / 过滤结果
-
-The service supports server-side filtering via the `filter` query parameter. The filter expression is a simple string with the format `column_name operator value`.
-
--   **Supported Operators**: `==`, `!=`, `>`, `<`, `>=`, `<=`
--   **Value Types**: String values must be enclosed in single quotes (e.g., `'some value'`), while numeric values should not be.
-
-**Example:**
-
-```bash
-# Get data for 'sample_json_metric' where the 'name' field is 'user_a'
-curl "http://localhost:8080/api/metrics/sample_json_metric?filter=name=='user_a'"
+```
+src/main/java/com/example/unifieddataservice/
+├── config/               # 配置类 / Configuration classes
+│   ├── CacheConfig.java   # 缓存配置 / Cache configuration
+│   ├── DataInitializer.java # 数据初始化 / Data initialization
+│   └── HttpClientConfig.java # HTTP客户端配置 / HTTP client configuration
+├── controller/           # 控制器 / Controllers
+│   └── MetricController.java # 指标API / Metrics API
+├── model/                # 数据模型 / Data models
+│   ├── DataSourceType.java # 数据源类型枚举 / Data source type enum
+│   ├── DataType.java     # 数据类型枚举 / Data type enum
+│   ├── MetricInfo.java   # 指标信息实体 / Metric info entity
+│   └── UnifiedDataTable.java # 统一数据表 / Unified data table
+├── repository/           # 数据访问层 / Data access layer
+│   └── MetricInfoRepository.java # 指标仓库 / Metric repository
+└── service/              # 业务逻辑 / Business logic
+    ├── CsvDataExporter.java # CSV导出器 / CSV exporter
+    ├── DataFetcherService.java # 数据获取服务 / Data fetcher service
+    ├── DataFilteringService.java # 数据过滤服务 / Data filtering service
+    ├── MetricService.java # 指标服务 / Metric service
+    └── parser/          # 数据解析器 / Data parsers
+        ├── CsvDataParser.java # CSV解析器 / CSV parser
+        ├── DataParser.java   # 解析器接口 / Parser interface
+        ├── DataTypeMapper.java # 数据类型映射 / Data type mapper
+        └── JsonDataParser.java # JSON解析器 / JSON parser
 ```
 
-## API 使用说明
+## 📝 变更日志 / Changelog
 
-服务主要通过一个端点来获取指标数据。
+### [2025-06-24] - 初始版本 / Initial Release
+- **修复 / Fixed**: 通过添加JVM参数解决API端点的500错误 / Resolved 500 error on API endpoints by adding JVM argument
+- **修复 / Fixed**: 清理重复的应用程序属性解决启动失败 / Fixed application startup by cleaning up duplicate properties
+- **新增 / Added**: 添加Spring Boot Actuator支持 / Added Spring Boot Actuator support
+- **改进 / Improved**: 增强日志配置 / Enhanced logging configuration
+- **新增 / Added**: 初始化Git仓库 / Initialized Git repository
+
+### [2025-06-23] - Bug修复和测试改进 / Bug Fixes and Test Improvements
+- **修复JSON解析器时间戳处理 / Fixed JSON Parser Timestamp Handling**
+  - 在`JsonDataParser`中添加对`TIMESTAMP`数据类型的支持 / Added support for `TIMESTAMP` data type
+  - 修复JSON数据中时间戳字段的空值处理 / Fixed null handling for timestamp fields
+  - 更新测试数据以正确表示空时间戳值 / Updated test data for null timestamp values
+
+- **测试套件改进 / Test Suite Improvements**
+  - 修复测试数据中的字段名称不匹配 / Fixed field name mismatches in test data
+  - 解决时间戳向量的`ClassCastException` / Resolved `ClassCastException` for timestamp vectors
+  - 确保`JsonDataParserTest`中的所有测试通过 / Ensured all tests in `JsonDataParserTest` pass
+
+## 📄 许可证 / License
+
+This project is licensed under the Apache License 2.0 - see the [LICENSE](LICENSE) file for details.
+
+## 🤝 贡献 / Contributing
+
+欢迎提交问题和拉取请求！请确保您的代码符合项目编码标准，并包含适当的测试。
+
+Issues and pull requests are welcome! Please ensure your code follows the project's coding standards and includes appropriate tests.
 
 ### 获取指标数据
 
